# english-anki-audio-builder

./: .gitignore  LICENSE  README.md  README.pt-BR.md  TUTORIAL.md  config.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: 01_vocabulary_60_oral_test.csv  02_connectors_40_oral_test.csv  anki_import_connectors.csv  anki_import_vocabulary_phrases.csv  connectors.csv  spanish_basics.csv  vocabulary.csv
docs/: PASSO_A_PASSO.md
scripts/: build.py  copy_audio_to_anki.py  generate_audio.py
tests/: test_generate_audio.py
