[project]
name = "english-anki-audio-builder"
version = "1.0.0"
description = "Generate free English TTS audio for Anki flashcards using Microsoft Edge TTS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "James Pelosi" }]
keywords = ["anki", "tts", "flashcards", "language-learning", "edge-tts"]

[project.urls]
Repository = "https://github.com/jamespelosi7/english-anki-audio-builder"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
